fournisseur knp pdf

--- a/templates/fournisseur/index.html.twig
+++ b/templates/fournisseur/index.html.twig
@@ -17,9 +17,10 @@
           </div>
         </div>
         <div class="page-title-actions">
-          <a href="{{ path('app_fournisseur_new') }}" class="btn btn-success">
-            <i class="pe-7s-plus mr-2"></i> Nouveau Fournisseur
+          <a href="{{ path('fournisseur_export_pdf') }}" target="_blank" class="btn btn-danger mb-3">
+            <i class="fas fa-file-pdf"></i> Exporter PDF
           </a>
+          
         </div>
       </div>
     </div>
